@@ -19,6 +19,7 @@ Acme::Alien::DontPanic                         = 0.009
 Acme::Ford::Prefect                            = 0.009
 Acme::Ford::Prefect::FFI                       = 0.04
 Alien::Base                                    = 0.006
+Alien::bison                                   = 0.06
 Alien::bz2                                     = 0.14
 Alien::bz2::Installer                          = 0.05
 Alien::Editline                                = 0.02
@@ -27,9 +28,10 @@ Alien::gmake                                   = 0.05
 Alien::Libarchive                              = 0.22
 Alien::Libarchive::Installer                   = 0.10
 Alien::LibYAML                                 = 0.1.4
+Alien::m4                                      = 0.02
 Alien::MSYS                                    = 0.07
 Alien::nasm                                    = 0.04
-Alien::o2dll                                   = 0.02
+Alien::o2dll                                   = 0.03
 Alien::Packages::Cygwin                        = 0.03
 Alien::patch                                   = 0.03
 AnyEvent::Finger                               = 0.09
